fixed the minor gaps in view referal page

--- a/src/components/ReferralSupport/ViewReferral.css
+++ b/src/components/ReferralSupport/ViewReferral.css
@@ -121,4 +121,10 @@ margin-right: 20px;
         margin-left: -0px;
         margin-top: 15px;
     }
+    .refererDetails1{
+        width: 50%;
+    }
+    .commentSecHolder1{
+        width: 75%;
+    }
 }
